--- a/jackl0phty.nmap/defaults/main.yml
+++ b/jackl0phty.nmap/defaults/main.yml
@@ -1,2 +1,14 @@
 ---
 # defaults file for jackl0phty.nmap
+
+# Set type of install to do.
+install_type: 'source'
+
+# Set version of Nmap is installed ( Used only for installing via source ).
+version: '6.47'
+
+# Nmap download URL ( Used only for installing via source ).
+download_url: 'https://nmap.org/dist/nmap-{{ version }}.tar.bz2'
+
+# Ansible deploy user.
+user: ansible_deployer
