--- a/jackl0phty.nmap/meta/main.yml
+++ b/jackl0phty.nmap/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  author: your name
-  description: 
-  company: your company (optional)
+  author: Gerald L. Hevener Jr. 
+  description: Installs Nmap; An open source port scanner.
+  company: Jackl0phty LLC.
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
   # issue_tracker_url: http://example.com/issue/tracker
@@ -13,7 +13,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: Apache 2.0
   min_ansible_version: 1.2
   #
   # Below are all platforms currently available. Just uncomment
@@ -74,7 +74,7 @@ galaxy_info:
   #  - 9.2
   #- name: Ubuntu
   #  versions:
-  #  - all
+    - all
   #  - lucid
   #  - maverick
   #  - natty
@@ -99,7 +99,7 @@ galaxy_info:
   #  - any
   #- name: Debian
   #  versions:
-  #  - all
+    - all
   #  - etch
   #  - lenny
   #  - squeeze
