--- a/jackl0phty.nmap/meta/main.yml
+++ b/jackl0phty.nmap/meta/main.yml
@@ -14,7 +14,7 @@ galaxy_info:
   # - Apache
   # - CC-BY
   license: Apache 2.0
-  min_ansible_version: 1.2
+  min_ansible_version: 1.7
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your 
@@ -121,7 +121,7 @@ galaxy_info:
   #- monitoring
   #- networking
   #- packaging
-  #- system
+  - system
   #- web
 dependencies: []
   # List your role dependencies here, one per line.
