--- a/jackl0phty.nmap/meta/main.yml
+++ b/jackl0phty.nmap/meta/main.yml
@@ -13,7 +13,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: Apache 2.0
+  license: Apache
   min_ansible_version: 1.7
   #
   # Below are all platforms currently available. Just uncomment
@@ -127,4 +127,3 @@ dependencies: []
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
-  
