--- a/jackl0phty.nmap/defaults/main.yml
+++ b/jackl0phty.nmap/defaults/main.yml
@@ -2,10 +2,10 @@
 # defaults file for jackl0phty.nmap
 
 # Set type of install to do.
-install_type: 'source'
+nmap_install_type: 'source'
 
 # Set version of Nmap is installed ( Used only for installing via source ).
-version: '6.47'
+nmap_version: '6.47'
 
 # Nmap download URL ( Used only for installing via source ).
-download_url: 'https://nmap.org/dist/nmap-{{ version }}.tar.bz2'
+nmap_download_url: 'https://nmap.org/dist/nmap-{{ version }}.tar.bz2'
