--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,29 +7,28 @@
     nmap_version: '6.47'
     nmap_install_type: 'source'
 
-  tasks:
-    - name: download_nmap_source
-      get_url: url={{ nmap_download_url }} dest=/tmp/nmap-{{ nmap_version }}.tar.bz2
+- name: download_nmap_source
+  get_url: url={{ nmap_download_url }} dest=/tmp/nmap-{{ nmap_version }}.tar.bz2
 
-    - stat: path=/tmp/nmap-{{ nmap_version }}
-      register: nmap_tmp_dir 
+  stat: path=/tmp/nmap-{{ nmap_version }}
+  register: nmap_tmp_dir 
 
-    - name: Uncompress Nmap
-      unarchive: src=/tmp/nmap-{{ nmap_version }}.tar.bz2 dest=/tmp
-      when: nmap_tmp_dir.stat.exists == False
+- name: Uncompress Nmap
+  unarchive: src=/tmp/nmap-{{ nmap_version }}.tar.bz2 dest=/tmp
+  when: nmap_tmp_dir.stat.exists == False
 
-    - stat: path=/usr/local/bin/nmap
-      register: bin
+  stat: path=/usr/local/bin/nmap
+  register: bin
 
-    - name: Execute configure script 
-      shell: './configure chdir=/tmp/nmap-{{ nmap_version }}'
-      when: bin.stat.exists == False
+- name: Execute configure script 
+  shell: './configure chdir=/tmp/nmap-{{ nmap_version }}'
+  when: bin.stat.exists == False
 
-    - name: Run make
-      shell: 'make chdir=/tmp/nmap-{{ nmap_version }}'
-      when: bin.stat.exists == False
+- name: Run make
+  shell: 'make chdir=/tmp/nmap-{{ nmap_version }}'
+  when: bin.stat.exists == False
 
-    - name: Install Nmap binary
-      shell: 'make install chdir=/tmp/nmap-{{ nmap_version }}'
-      sudo: yes
-      when: bin.stat.exists == False
+- name: Install Nmap binary
+  shell: 'make install chdir=/tmp/nmap-{{ nmap_version }}'
+  sudo: yes
+  when: bin.stat.exists == False
