--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,7 @@
 ---
 # tasks file for jackl0phty.nmap
 
-- vars:
-  nmap_download_url: 'https://nmap.org/dist/nmap-{{ version }}.tar.bz2'
-  nmap_version: '6.47'
-  nmap_install_type: 'source'
+- include_vars: main.yml 
 
 - name: download_nmap_source
   get_url: url={{ nmap_download_url }} dest=/tmp/nmap-{{ nmap_version }}.tar.bz2
