--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,4 +8,4 @@ nmap_install_type: 'source'
 nmap_version: '6.47'
 
 # Nmap download URL ( Used only for installing via source ).
-nmap_download_url: 'https://nmap.org/dist/nmap-{{ version }}.tar.bz2'
+nmap_download_url: 'https://nmap.org/dist/nmap-{{ nmap_version }}.tar.bz2'
