Add .gitignore file. Add Vagrantfile. Update meta/main.yml to include supported OSs. Updated tasks/main.yml to work on Debian,Ubuntu,CentOS. Initial Vagrant integration.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,5 +12,11 @@ galaxy_info:
   - name: Ubuntu
     versions:
     - all
+  - name: Redhat
+    versions:
+    - all
+  - name: CentOS
+    versions:
+    - all
   categories:
     - system
