--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,20 +1,26 @@
 ---
-# tasks file for jackl0phty.nmap
+# Tasks file for jackl0phty.nmap
 
 - hosts: all
-#  become: yes
-#  become_method: sudo
-#  become: true
-#  become_user: root
-#  become_method: sudo
 
   tasks:
+
     - include_vars: "../vars/main.yml"
-    
-    - name: Install g++ package
+
+    - name: Install packages for Debian based distros.
       apt: name=g++ update_cache=yes
       become: yes
       become_user: root
+      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+
+    - name: Install packages for Redhat based distros.
+      yum: pkg={{item}} state=latest
+      with_items:
+      - bzip2
+      - gcc-c++
+      become: yes
+      become_user: root
+      when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
     - name: download_nmap_source
       get_url: url={{ nmap_download_url }} dest=/tmp/nmap-{{ nmap_version }}.tar.bz2
