--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@
 language: python
 python: "2.7"
 
-env:
-  - SITE=test.yml
+#env:
+#  - SITE=test.yml
 
 before_install:
   - sudo apt-get update -qq
@@ -12,29 +12,19 @@ install:
   # Install Ansible.
   - pip install ansible
 
-  # Install Ansible Linter tool.
-  - pip install ansible-lint
-
   # Add ansible.cfg to pick up roles path.
-  - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+  - "printf '[defaults]\nroles_path = ../' > ansible.cfg"
 
 script:
   # Check the role/playbook's syntax.
-  - "ansible-playbook -i tests/inventory tests/$SITE --syntax-check"
-
-  # Run linter against *.yml files.
-  - "ansible-lint defaults/main.yml"
-  - "ansible-lint handlers/main.yml"
-  - "ansible-lint meta/main.yml"
-  - "ansible-lint tests/test.yml"
-  - "ansible-lint .travis.yml"
+  - "ansible-playbook -i tests/inventory tests/test.yml --syntax-check"
 
   # Run the role/playbook with ansible-playbook.
-  - "ansible-playbook -i tests/inventory tests/$SITE --connection=local --sudo"
+  - "ansible-playbook -i tests/inventory tests/test.yml --connection=local --sudo"
 
   # Run the role/playbook again, checking to make sure it's idempotent.
   - >
-    ansible-playbook -i tests/inventory tests/$SITE --connection=local --sudo
+    ansible-playbook -i tests/inventory tests/test.yml --connection=local --sudo
     | grep -q 'changed=0.*failed=0'
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
