Update .travis.yml & tasks/main.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ install:
   # Install Ansible.
   - pip install ansible
 
+  # Display Ansible version.
+  - ansible --version
+
   # Add ansible.cfg to pick up roles path.
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
 
